--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@ body{
 
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid turquoise;
     margin: 0 auto;
@@ -15,4 +15,18 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#cabecera{
+    background: firebrick;
+    color: whitesmoke;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+
+#cabecera #tagline{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
 }
